letter_upper_case

--- a/index.html
+++ b/index.html
@@ -78,9 +78,12 @@
           alt="tea"
         />
       </div> -->
-      <section>
+      <div class="title">
+        <h2>Türkistan Kültür Evi</h2>
+      </div>
+      <section class="mt-5">
         <div class="title">
-          <h2>ÇAY</h2>
+          <h2>Çay</h2>
         </div>
         <div class="div-no-img">
           <h3>Çay</h3>
@@ -105,7 +108,7 @@
       </section>
       <section>
         <div class="title">
-          <h2>TÜRK KAHVESİ</h2>
+          <h2>Türk Kahvesi</h2>
         </div>
         <div class="div-no-img">
           <h3>Türk Kahvesi</h3>
@@ -130,7 +133,7 @@
       </section>
       <section>
         <div class="title">
-          <h2>TOST</h2>
+          <h2>Tost</h2>
         </div>
         <div class="div-no-img">
           <h3>Bazlama Çift Kaşarlı</h3>
@@ -151,7 +154,7 @@
       </section>
       <section>
         <div class="title">
-          <h2>TATLILAR</h2>
+          <h2>Tatlılar</h2>
         </div>
         <div class="div-no-img">
           <h3>San Sebastian Cheesecake</h3>
@@ -181,7 +184,7 @@
 
       <section>
         <div class="title">
-          <h2>ATIŞTIRMALIK</h2>
+          <h2>Atıştırmalık</h2>
         </div>
         <div class="div-no-img">
           <h3>Special Kuruyemiş Tabağı</h3>
@@ -203,7 +206,7 @@
 
       <section>
         <div class="title">
-          <h2>ECNEBİ KAHVELER</h2>
+          <h2>Ecnebi Kahveleri</h2>
         </div>
         <div class="div-no-img">
           <h3>Espresso</h3>
