--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
         </div>
       </section>
 
-      <section>
-        <div class="title">
+      <section class="kahve">
+        <div class="title ">
           <h2>Ecnebi Kahveleri</h2>
         </div>
         <div class="div-no-img">
@@ -252,7 +252,7 @@
 
       <section>
         <div class="title">
-          <h2>TÜRKİSTAN AŞLARI</h2>
+          <h2>Türkistan Aşları</h2>
         </div>
         <div class="div-no-img">
           <h3>Türkistan Pilavı</h3>
@@ -285,7 +285,7 @@
       </section>
       <section>
         <div class="title">
-          <h2>SOĞUK İÇECEKLER</h2>
+          <h2>Soğuk İçecekler</h2>
         </div>
         <div class="div-no-img">
           <h3>Cola Turka</h3>
