--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="title">
         <h2>Türkistan Kültür Evi</h2>
       </div>
-      <section class="mt-5">
+      <section class="mt-5 fade-in-section">
         <div class="title">
           <h2>Çay</h2>
         </div>
@@ -106,7 +106,7 @@
           <p class="price">70 ₺</p>
         </div>
       </section>
-      <section>
+      <section class="fade-in-section">
         <div class="title">
           <h2>Türk Kahvesi</h2>
         </div>
@@ -131,7 +131,7 @@
           <p class="price">70 ₺</p>
         </div>
       </section>
-      <section>
+       <section class="fade-in-section">
         <div class="title">
           <h2>Tost</h2>
         </div>
@@ -152,7 +152,7 @@
           <p class="price">150 ₺</p>
         </div>
       </section>
-      <section>
+       <section class="fade-in-section">
         <div class="title">
           <h2>Tatlılar</h2>
         </div>
@@ -182,7 +182,7 @@
         </div>
       </section>
 
-      <section>
+       <section class="fade-in-section">
         <div class="title">
           <h2>Atıştırmalık</h2>
         </div>
@@ -250,7 +250,7 @@
         </div>
       </section>
 
-      <section>
+       <section class="fade-in-section">
         <div class="title">
           <h2>Türkistan Aşları</h2>
         </div>
@@ -283,7 +283,7 @@
           <p class="price">80 ₺</p>
         </div>
       </section>
-      <section>
+       <section class="fade-in-section">
         <div class="title">
           <h2>Soğuk İçecekler</h2>
         </div>
@@ -339,5 +339,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="app.js"></script>
   </body>
 </html>
