--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         </div>
       </section>
 
-      <section class="kahve">
+      <section class="fade-in-section kahve ">
         <div class="title ">
           <h2>Ecnebi Kahveleri</h2>
         </div>
