--- a/index.html
+++ b/index.html
@@ -11,44 +11,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./style.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poetsen+One&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Lobster&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poetsen+One&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Indie+Flower&family=Lobster&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poetsen+One&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Dancing+Script:wght@400..700&family=Indie+Flower&family=Lobster&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poetsen+One&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Dancing+Script:wght@400..700&family=Indie+Flower&family=Lobster&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poetsen+One&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container-fluid p-0">
@@ -78,7 +44,7 @@
           alt="tea"
         />
       </div> -->
-      <div class="title">
+      <div class="title animate__animated animate__bounce">
         <h2>Türkistan Kültür Evi</h2>
       </div>
       <section class="mt-5 fade-in-section">
@@ -98,7 +64,10 @@
           <p class="price">250 ₺</p>
         </div>
         <div class="div-no-img">
-          <h3>Demlik Çay Büyük Boy</h3>
+          <div class="with-desc">
+            <h3>Demlik Çay Büyük Boy</h3>
+            <p class="desc">(Kuruyemiş ve kurabiye ile servis edilir.)</p>
+          </div>
           <p class="price">350 ₺</p>
         </div>
         <div class="div-no-img">
@@ -131,12 +100,15 @@
           <p class="price">70 ₺</p>
         </div>
       </section>
-       <section class="fade-in-section">
+      <section class="fade-in-section animate__animated animate__bounce">
         <div class="title">
           <h2>Tost</h2>
         </div>
         <div class="div-no-img">
-          <h3>Bazlama Çift Kaşarlı</h3>
+          <div class="with-desc">
+            <h3>Bazlama Çift Kaşarlı</h3>
+            <p class="desc">(Domates, siyah zeytin, kaşar peyniri)</p>
+          </div>
           <p class="price">90 ₺</p>
         </div>
         <div class="div-no-img">
@@ -144,7 +116,10 @@
           <p class="price">100 ₺</p>
         </div>
         <div class="div-no-img">
-          <h3>Bazlama Çiftlik</h3>
+          <div class="with-desc">
+            <h3>Bazlama Çiftlik</h3>
+            <p class="desc">(Domates, siyah zeytin, kaşar peyniri)</p>
+          </div>
           <p class="price">100 ₺</p>
         </div>
         <div class="div-no-img">
@@ -152,7 +127,7 @@
           <p class="price">150 ₺</p>
         </div>
       </section>
-       <section class="fade-in-section">
+      <section class="fade-in-section">
         <div class="title">
           <h2>Tatlılar</h2>
         </div>
@@ -182,7 +157,7 @@
         </div>
       </section>
 
-       <section class="fade-in-section">
+      <section class="fade-in-section">
         <div class="title">
           <h2>Atıştırmalık</h2>
         </div>
@@ -204,13 +179,13 @@
         </div>
       </section>
 
-      <section class="fade-in-section kahve ">
-        <div class="title ">
-          <h2>Ecnebi Kahveleri</h2>
+      <section class="fade-in-section kahve">
+        <div class="title">
+          <h2>Ecnebi Kahveler</h2>
         </div>
         <div class="div-no-img">
           <h3>Espresso</h3>
-          <p class="price">110 ₺</p>
+          <p class="price">50 ₺</p>
         </div>
         <div class="div-no-img">
           <h3>Latte</h3>
@@ -250,16 +225,23 @@
         </div>
       </section>
 
-       <section class="fade-in-section">
+      <section class="fade-in-section">
         <div class="title">
           <h2>Türkistan Aşları</h2>
         </div>
         <div class="div-no-img">
-          <h3>Türkistan Pilavı</h3>
+          <div class="with-desc">
+            <h3>Türkistan Pilavı</h3>
+            <p class="desc">(Basmati pirinç, havuç, zerdeçal, dana eti)</p>
+          </div>
           <p class="price">180 ₺</p>
         </div>
         <div class="div-no-img">
-          <h3>Türkistan Mantısı</h3>
+          <div class="with-desc">
+            <h3>Türkistan Mantısı</h3>
+            <p class="desc">(1 porsiyonda 6 adet yer alır.)</p>
+          </div>
+
           <p class="price">270 ₺</p>
         </div>
         <div class="div-no-img">
@@ -267,12 +249,18 @@
           <p class="price">50 ₺</p>
         </div>
         <div class="div-no-img">
-          <h3>Türkistan Çorbası</h3>
+          <div class="with-desc">
+            <h3>Türkistan Çorbası</h3>
+            <p class="desc">(Küçük mantılar ile sebze çeşitleri içerir.)</p>
+          </div>
           <p class="price">180 ₺</p>
         </div>
         <div class="div-no-img">
-          <h3>Türkistan Lağmen</h3>
-          <p class="price">230 ₺</p>
+
+          <div class="with-desc">
+            <h3>Türkistan Lağmen</h3>
+            <p class="desc">(Acılı kavurmalı makarna)</p>
+          </div>
         </div>
         <div class="div-no-img">
           <h3>Hamur Salatası</h3>
@@ -283,7 +271,7 @@
           <p class="price">80 ₺</p>
         </div>
       </section>
-       <section class="fade-in-section">
+      <section class="fade-in-section">
         <div class="title">
           <h2>Soğuk İçecekler</h2>
         </div>
