--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Türkistan Kültür Evi</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="./style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container-fluid p-0">
@@ -47,7 +44,32 @@
       <div class="title animate__animated animate__bounce">
         <h2>Türkistan Kültür Evi</h2>
       </div>
-      <section class="mt-5 fade-in-section">
+      <section class="">
+        <div class="title">
+          <h2>Türk Kahvesi</h2>
+        </div>
+        <div class="div-no-img">
+          <h3>Türk Kahvesi</h3>
+          <p class="price">50 ₺</p>
+        </div>
+        <div class="div-no-img">
+          <h3>Dibek Kahvesi</h3>
+          <p class="price">60 ₺</p>
+        </div>
+        <div class="div-no-img">
+          <h3>Damlı Sakızlı Türk Kahvesi</h3>
+          <p class="price">250 ₺</p>
+        </div>
+        <div class="div-no-img">
+          <h3>Menengiç Kahvesi</h3>
+          <p class="price">350 ₺</p>
+        </div>
+        <div class="div-no-img">
+          <h3>Bitki Çayları</h3>
+          <p class="price">70 ₺</p>
+        </div>
+      </section>
+      <section class="mt-5">
         <div class="title">
           <h2>Çay</h2>
         </div>
@@ -75,32 +97,8 @@
           <p class="price">70 ₺</p>
         </div>
       </section>
-      <section class="fade-in-section">
-        <div class="title">
-          <h2>Türk Kahvesi</h2>
-        </div>
-        <div class="div-no-img">
-          <h3>Türk Kahvesi</h3>
-          <p class="price">50 ₺</p>
-        </div>
-        <div class="div-no-img">
-          <h3>Dibek Kahvesi</h3>
-          <p class="price">60 ₺</p>
-        </div>
-        <div class="div-no-img">
-          <h3>Damlı Sakızlı Türk Kahvesi</h3>
-          <p class="price">250 ₺</p>
-        </div>
-        <div class="div-no-img">
-          <h3>Menengiç Kahvesi</h3>
-          <p class="price">350 ₺</p>
-        </div>
-        <div class="div-no-img">
-          <h3>Bitki Çayları</h3>
-          <p class="price">70 ₺</p>
-        </div>
-      </section>
-      <section class="fade-in-section animate__animated animate__bounce">
+
+      <section class="animate__animated animate__bounce">
         <div class="title">
           <h2>Tost</h2>
         </div>
@@ -127,7 +125,7 @@
           <p class="price">150 ₺</p>
         </div>
       </section>
-      <section class="fade-in-section">
+      <section class="">
         <div class="title">
           <h2>Tatlılar</h2>
         </div>
@@ -157,7 +155,7 @@
         </div>
       </section>
 
-      <section class="fade-in-section">
+      <section class="">
         <div class="title">
           <h2>Atıştırmalık</h2>
         </div>
@@ -179,53 +177,63 @@
         </div>
       </section>
 
-      <section class="fade-in-section kahve">
+      <section class="kahve">
         <div class="title">
           <h2>Ecnebi Kahveler</h2>
         </div>
         <div class="div-no-img">
           <h3>Espresso</h3>
-          <p class="price">50 ₺</p>
+          <p class="price discount">50 ₺</p>
+          <p class="price">25 ₺</p>
         </div>
         <div class="div-no-img">
           <h3>Latte</h3>
-          <p class="price">70 ₺</p>
+          <p class="price discount">70 ₺</p>
+          <p class="price">35 ₺</p>
         </div>
         <div class="div-no-img">
           <h3>Americano</h3>
-          <p class="price">70 ₺</p>
+          <p class="price discount">70 ₺</p>
+          <p class="price">35 ₺</p>
         </div>
         <div class="div-no-img">
           <h3>Sütlü Kahve</h3>
-          <p class="price">70 ₺</p>
+          <p class="price discount">70 ₺</p>
+          <p class="price">35 ₺</p>
         </div>
         <div class="div-no-img">
           <h3>Sütlü Çikolata</h3>
-          <p class="price">70 ₺</p>
+          <p class="price discount">70 ₺</p>
+          <p class="price">35 ₺</p>
         </div>
         <div class="div-no-img">
           <h3>Sıcak Çikolata</h3>
-          <p class="price">70 ₺</p>
+          <p class="price discount">70 ₺</p>
+          <p class="price">35 ₺</p>
         </div>
         <div class="div-no-img">
           <h3>Mocha</h3>
-          <p class="price">70 ₺</p>
+          <p class="price discount">70 ₺</p>
+          <p class="price">35 ₺</p>
         </div>
         <div class="div-no-img">
           <h3>Cappuccino</h3>
-          <p class="price">70 ₺</p>
+          <p class="price discount">70 ₺</p>
+          <p class="price">35 ₺</p>
         </div>
         <div class="div-no-img">
           <h3>Salep</h3>
-          <p class="price">70 ₺</p>
+          <p class="price discount">70 ₺</p>
+          <p class="price">35 ₺</p>
         </div>
         <div class="div-no-img">
           <h3>Filtre Kahve</h3>
-          <p class="price">70 ₺</p>
+          <p class="price discount">70 ₺</p>
+          <p class="price">35 ₺</p>
         </div>
       </section>
 
-      <section class="fade-in-section">
+      <section class="">
         <div class="title">
           <h2>Türkistan Aşları</h2>
         </div>
@@ -256,7 +264,6 @@
           <p class="price">180 ₺</p>
         </div>
         <div class="div-no-img">
-
           <div class="with-desc">
             <h3>Türkistan Lağmen</h3>
             <p class="desc">(Acılı kavurmalı makarna)</p>
@@ -271,7 +278,7 @@
           <p class="price">80 ₺</p>
         </div>
       </section>
-      <section class="fade-in-section">
+      <section class="last">
         <div class="title">
           <h2>Soğuk İçecekler</h2>
         </div>
@@ -321,12 +328,5 @@
         </div>
       </section>
     </div>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <script src="app.js"></script>
   </body>
 </html>
