--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
           alt="tea"
         />
       </div> -->
-      <div class="title animate__animated animate__bounce">
-        <h2>Türkistan Kültür Evi</h2>
+      <div class="init-title title animate__animated animate__bounce first-title">
+        <h2>Türkistan Kültür Evi'ne Hoş Geldiniz :)</h2>
       </div>
       <section class="">
-        <div class="title">
+        <div class="title first-title">
           <h2>Türk Kahvesi</h2>
         </div>
         <div class="div-no-img">
@@ -70,7 +70,7 @@
         </div>
       </section>
       <section class="mt-5">
-        <div class="title">
+        <div class="title first-title">
           <h2>Çay</h2>
         </div>
         <div class="div-no-img">
